force-app/main/default/objects/blng__RevenueTransaction__c/fields/blng__Account__c.field-meta.xml
<CustomField>
    <fullName>blng__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RevenueTransactions</relationshipLabel>
    <relationshipName>AccountRevenueTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>