force-app/main/default/objects/blng__RevenueTransaction__c/fields/blng__Contract__c.field-meta.xml
<CustomField>
    <fullName>blng__Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>RevenueTransactions</relationshipLabel>
    <relationshipName>ContractRevenueTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>