force-app/main/default/objects/blng__RevenueTransaction__c/fields/blng__DebitNoteLine__c.field-meta.xml
<CustomField>
    <fullName>blng__DebitNoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the debit note associated with this revenue schedule.</inlineHelpText>
    <label>Debit Note Line</label>
    <referenceTo>blng__DebitNoteLine__c</referenceTo>
    <relationshipLabel>RevenueTransactions</relationshipLabel>
    <relationshipName>DebitNoteLineRevenueTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>