force-app/main/default/objects/blng__RevenueTransaction__c/fields/blng__DeferredBalance__c.field-meta.xml
<CustomField>
    <fullName>blng__DeferredBalance__c</fullName>
    <inlineHelpText>Deferred revenue balance after recognizing revenue for this period.</inlineHelpText>
    <label>Deferred Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>