force-app/main/default/objects/blng__RevenueTransaction__c/fields/blng__LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>blng__LegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the legal entity associated with this revenue transaction.</inlineHelpText>
    <label>Legal Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>RevenueTransactions</relationshipLabel>
    <relationshipName>LegalEntityRevenueTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>