force-app/main/default/objects/blng__RevenueTransaction__c/fields/blng__PreviouslyRecognizedRevenue__c.field-meta.xml
<CustomField>
    <fullName>blng__PreviouslyRecognizedRevenue__c</fullName>
    <inlineHelpText>Sum of all prior transactions using this revenue schedule.</inlineHelpText>
    <label>Previously Recognized Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>