force-app/main/default/objects/blng__RevenueTransaction__c/fields/blng__RevenueAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueAmount__c</fullName>
    <inlineHelpText>Amount of revenue to recognize in this period.</inlineHelpText>
    <label>Revenue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>