force-app/main/default/objects/blng__RevenueTransaction__c/fields/blng__RevenueDistributionMethod__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueDistributionMethod__c</fullName>
    <inlineHelpText>Refers to the distribution method selected in the revenue schedule. Describes how revenue is spread
        over a set time period, all at once, or manually-entered time period.</inlineHelpText>
    <label>Revenue Distribution Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>