force-app/main/default/objects/blng__RevenueTransaction__c/fields/blng__RevenueFinanceBook__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueFinanceBook__c</fullName>
    <inlineHelpText>Refers to the finance book selected on the revenue schedule.</inlineHelpText>
    <label>Revenue Finance Book</label>
    <length>255</length>
    <type>Text</type>
</CustomField>