force-app/main/default/objects/blng__RevenueTransaction__c/fields/blng__RevenueFinancePeriodUniqueId__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueFinancePeriodUniqueId__c</fullName>
    <label>RevenueFinancePeriodUniqueId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>