force-app/main/default/objects/blng__RevenueTransaction__c/fields/blng__RevenueRecognitionRule__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueRecognitionRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The revenue recognition policy selected in the revenue schedule and used to calculate this transaction.</inlineHelpText>
    <label>Revenue Recognition Rule</label>
    <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
    <relationshipLabel>RevenueTransactions</relationshipLabel>
    <relationshipName>RevRecRuleRevenueTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>