force-app/main/default/objects/blng__RevenueTransaction__c/fields/blng__RevenueRecognitionTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueRecognitionTreatment__c</fullName>
    <inlineHelpText>Refers to the revenue recognition treatment selected in the revenue schedule used to calculate this transaction.</inlineHelpText>
    <label>Revenue Recognition Treatment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>