force-app/main/default/objects/blng__RevenueTransaction__c/fields/blng__Status__c.field-meta.xml
<CustomField>
    <fullName>blng__Status__c</fullName>
    <inlineHelpText>Select whether this revenue is recognized now or deferred until later.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RevenueTransactionStatus</valueSetName>
    </valueSet>
</CustomField>