force-app/main/default/objects/blng__RevenueTransaction__c/fields/blng__SystemPeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>blng__SystemPeriodStartDate__c</fullName>
    <label>System Period Start Date</label>
    <type>Date</type>
</CustomField>